--- a/Domainr7/Domainr7.csproj
+++ b/Domainr7/Domainr7.csproj
@@ -55,6 +55,9 @@
     <Reference Include="Coding4Fun.Phone.Site.Controls">
       <HintPath>..\packages\coding4fun\Coding4Fun.Phone.Site.Controls.dll</HintPath>
     </Reference>
+    <Reference Include="DomainrSharp.WindowsPhone, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\DomainrSharp.1.0.0\lib\sl4-wp71\DomainrSharp.WindowsPhone.dll</HintPath>
+    </Reference>
     <Reference Include="GalaSoft.MvvmLight.WP71">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>C:\Program Files\Laurent Bugnion (GalaSoft)\Mvvm Light Toolkit\Binaries\WP71\GalaSoft.MvvmLight.WP71.dll</HintPath>
@@ -69,8 +72,8 @@
     <Reference Include="Microsoft.Phone.Controls.Toolkit, Version=7.0.0.0, Culture=neutral, PublicKeyToken=b772ad94eb9ca604, processorArchitecture=MSIL">
       <HintPath>..\packages\SilverlightToolkitWP.4.2011.12.14\lib\sl4-windowsphone71\Microsoft.Phone.Controls.Toolkit.dll</HintPath>
     </Reference>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>..\packages\Newtonsoft.Json.4.5.2\lib\sl4-windowsphone71\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.4.5.3\lib\sl4-windowsphone71\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="PhoneFlipMenuControl">
       <HintPath>..\packages\PhoneFlipMenu\PhoneFlipMenuControl.dll</HintPath>
@@ -87,9 +90,6 @@
     <Reference Include="ScottIsAFool.WindowsPhone, Version=1.0.7.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\ScottIsAFool.WindowsPhone.1.0.7.0\lib\ScottIsAFool.WindowsPhone.dll</HintPath>
-    </Reference>
-    <Reference Include="SharpGIS.GZipWebClient">
-      <HintPath>..\packages\SharpGIS.GZipWebClient.1.2\lib\sl40-wp71\SharpGIS.GZipWebClient.dll</HintPath>
     </Reference>
     <Reference Include="System.Observable" />
     <Reference Include="System.Reactive, Version=1.1.11111.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
@@ -131,9 +131,6 @@
     <Compile Include="Converters\AvailabilityVisibilityConverter.cs" />
     <Compile Include="Converters\NullVisibilityConverter.cs" />
     <Compile Include="Model\Constants.cs" />
-    <Compile Include="Model\DomainrInfo.cs" />
-    <Compile Include="Model\Registrar.cs" />
-    <Compile Include="Model\Tld.cs" />
     <Compile Include="ViewModel\DomainDetailsViewModel.cs" />
     <Compile Include="Views\DomainDetails.xaml.cs">
       <DependentUpon>DomainDetails.xaml</DependentUpon>
@@ -141,8 +138,6 @@
     <Compile Include="Views\MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Model\DomainrClass.cs" />
-    <Compile Include="Model\Result.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
     <Compile Include="ViewModel\ViewModelLocator.cs" />
