--- a/Domainr7/packages.config
+++ b/Domainr7/packages.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Coding4Fun.Phone.Controls.Complete" version="1.5.6" />
   <package id="DomainrSharp" version="1.0.1" />
   <package id="Newtonsoft.Json" version="4.5.3" />
+  <package id="PhoneFlipMenu" version="1.0.0" />
   <package id="reactiveui-core" version="2.5.2.0" />
   <package id="reactiveui-xaml" version="2.5.2.0" />
   <package id="Rx_Experimental-Main" version="1.1.11111" />
