Updated csproj to include FlurryConfig.xml

--- a/Domainr7/Domainr7.csproj
+++ b/Domainr7/Domainr7.csproj
@@ -175,7 +175,9 @@
     <Content Include="Content\About\Data.xml">
       <SubType>Designer</SubType>
     </Content>
-    <Content Include="FlurryConfig.xml" />
+    <Content Include="FlurryConfig.xml">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Icons\appbar.share.rest.png" />
     <Content Include="Images\clearboxicon.png" />
     <Content Include="SplashScreenImage.jpg">
