--- a/Domainr7/Domainr7.csproj
+++ b/Domainr7/Domainr7.csproj
@@ -22,7 +22,7 @@
     </SupportedCultures>
     <XapOutputs>true</XapOutputs>
     <GenerateSilverlightManifest>true</GenerateSilverlightManifest>
-    <XapFilename>Domainr7_$(Configuration)_$(Platform).xap</XapFilename>
+    <XapFilename>Domainr7_WP8.xap</XapFilename>
     <SilverlightManifestTemplate>Properties\AppManifest.xml</SilverlightManifestTemplate>
     <SilverlightAppEntry>Domainr7.App</SilverlightAppEntry>
     <ValidateXaml>true</ValidateXaml>
